--- a/www/apps/user-guide/app/inventory/page.mdx
+++ b/www/apps/user-guide/app/inventory/page.mdx
@@ -3,30 +3,32 @@ sidebar_autogenerate_exclude: true
 ---
 
 export const metadata = {
-  title: `Inventory`,
+  title: `Inventory Overview`,
 }
 
 # {metadata.title}
 
-In this document, you’ll get an overview of the inventory domain of the Medusa Admin.
+The Inventory domain allows you to manage inventory items, their quantity in different locations, and their reservations.
 
-## Overview
+When a product variant's "Manage Inventory" is enabled, inventory items are created for that variant to manage its quantity. You can also create inventory items and link them later to variants, which is most useful for [multi-part](../products/create/multi-part/page.mdx) and [bundled](../products/create/bundle/page.mdx) products.
 
-When a product variant's "Manage Inventory" is enabled, inventory items are created for that variant to manage its quantity.
+You can view the list of inventory items in your commerce store by clicking on Inventory from the sidebar menu.
 
-An inventory item has different quantities for each [location](../settings/locations/page.mdx).
+In the list, you can see inventory details such as the title, SKU, and in-stock quantity. You can also search, filter, and sort the inventory items to find the specific item you are looking for.
 
-<Note>
+<Note title="Tip">
 
-The following aren't explained within this section of the user guide:
-
-- Item allocation and locations in orders: this is explained in the [Manage Orders guide](../orders/manage/page.mdx).
+Find tips to use lists effectively in [this guide](../tips/lists/page.mdx).
 
 </Note>
 
+![Inventory List](https://res.cloudinary.com/dza7lstvk/image/upload/v1739881950/User%20Guide/Screenshot_2025-02-18_at_2.32.19_PM_ffxsur.png)
+
 ---
 
-## Learn More About Inventory
+## Manage Inventory
 
 - [Manage Inventory](./inventory/page.mdx)
 - [Manage Reservations](./reservations/page.mdx)
+
+You can also manage locations under [Settings](../settings/locations/page.mdx).
