--- a/www/apps/user-guide/app/products/collections/page.mdx
+++ b/www/apps/user-guide/app/products/collections/page.mdx
@@ -66,6 +66,26 @@ To edit a collection:
 
 ---
 
+## Edit Product Collection Metadata
+
+Metadata is custom data that can be associated with the product collection in key-value pairs. This is usually used by developers for custom integrations or to store additional information about the product collection.
+
+To edit the product collection's metadata:
+
+1. Go to the product collection's details page.
+2. Click the <InlineIcon Icon={ArrowUpRightOnBox} alt="arrow" /> icon at the right of the "Metadata" section.
+3. In the side window that opens:
+    - Manage the key-value pairs in the table.
+    - To add a new row of key-value pairs before or after a row:
+        - Hover over the row and click the <InlineIcon Icon={EllipsisVertical} alt="three-dots" /> icon at its right.
+        - Choose "Insert row above" or "Insert row below" from the dropdown.
+    - To delete a row of key-value pairs:
+        - Hover over the row and click the <InlineIcon Icon={EllipsisVertical} alt="three-dots" /> icon at its right.
+        - Choose "Delete row" from the dropdown.
+4. Once you're done, click the Save button.
+
+---
+
 ## Manage Collection’s Products
 
 From the product collection's details page, you can manage the products in the collection.
