fix build error

--- a/www/apps/user-guide/app/products/categories/page.mdx
+++ b/www/apps/user-guide/app/products/categories/page.mdx
@@ -2,7 +2,7 @@
 sidebar_position: 5
 ---
 
-import { DotsSix, TriangleRightMini, EllipsisHorizontal } from "@medusajs/icons"
+import { DotsSix, TriangleRightMini, EllipsisHorizontal, ArrowUpRightOnBox, EllipsisVertical } from "@medusajs/icons"
 
 export const metadata = {
   title: `Manage Product Categories`,
