--- a/www/apps/user-guide/app/products/collections/page.mdx
+++ b/www/apps/user-guide/app/products/collections/page.mdx
@@ -2,7 +2,7 @@
 sidebar_position: 4
 ---
 
-import { EllipsisHorizontal } from "@medusajs/icons"
+import { EllipsisHorizontal,ArrowUpRightOnBox, EllipsisVertical } from "@medusajs/icons"
 
 export const metadata = {
   title: `Manage Product Collections`,
