docs: update customers user guide

--- a/www/apps/user-guide/app/customers/page.mdx
+++ b/www/apps/user-guide/app/customers/page.mdx
@@ -3,32 +3,30 @@ sidebar_autogenerate_exclude: true
 ---
 
 export const metadata = {
-  title: `Customers`,
+  title: `Customers Overview`,
 }
 
 # {metadata.title}
 
-In this document, you’ll get an overview of the customer listing page.
+The Customers domain allows you to manage customers and customer groups in your commerce store.
 
-## Overview
+You can manage both customers that have registered in your store and guest customers that have placed an order. You can also segment these customers into groups to offer them specific [promotions](../discounts/page.mdx) and [pricing](../pricing/page.mdx).
 
-The Customers page shows you the list of registered customers in your store. For each of those customers, view details such as their orders, or personal information.
+You can view the list of customers in your commerce store by clicking on Customers from the sidebar menu.
 
-Part of the Customers domain is also Customer Groups. Customer groups allow you to put together a set of customers for business purposes.
+In the list, you can see customer details such as the email, name, and account type. You can also search, filter, and sort the customers to find the specific one you are looking for.
 
-For example, you can create a VIP customer group for customers that you want to give special discounts.
+<Note title="Tip">
 
----
+Find tips to use lists effectively in [this guide](../tips/lists/page.mdx).
 
-## View List of Customer Groups
+</Note>
 
-To view the list of customer groups, go to the Customers page, then go to the Customer Groups sub-item in the sidebar.
-
-On the Customer Groups page, you'll find the list of customer groups with their details.
+![Customers List](https://res.cloudinary.com/dza7lstvk/image/upload/v1739886647/User%20Guide/Screenshot_2025-02-18_at_3.50.29_PM_wq7m1k.png)
 
 ---
 
-## Learn More About Customers
+## Manage Customers
 
 - [Manage and View a Customer’s Details](./manage/page.mdx)
 - [Manage and View a Customer Group](./groups/page.mdx)
