--- a/www/apps/user-guide/app/orders/manage/page.mdx
+++ b/www/apps/user-guide/app/orders/manage/page.mdx
@@ -160,6 +160,12 @@ To transfer the ownership of an order to another customer:
 
 The original customer will then receive a notification requesting their approval for the transfer.
 
+<Note>
+
+If a notification isn't sent, check with your technical team to debug the integrated notification service.
+
+</Note>
+
 ![Transfer Ownership Form](https://res.cloudinary.com/dza7lstvk/image/upload/v1739546904/User%20Guide/Screenshot_2025-02-14_at_5.28.12_PM_brwpek.png)
 
 ---
